--- a/ml_misc/sigmoid_softmax/rust/sigmoid_softmax/Cargo.toml
+++ b/ml_misc/sigmoid_softmax/rust/sigmoid_softmax/Cargo.toml
@@ -2,6 +2,7 @@
 name = "sigmoid_softmax"
 version = "0.1.0"
 authors = ["Joshua Bowles <jbowayles@gmail.com>"]
+edition = '2018'
 
 [dependencies]
 nalgebra = "0.16"
