--- a/string_metrics/hamming/rust/popcount_hamming/Cargo.toml
+++ b/string_metrics/hamming/rust/popcount_hamming/Cargo.toml
@@ -4,4 +4,7 @@ version = "0.1.0"
 authors = ["Joshua Bowles <jbowayles@gmail.com>"]
 edition = "2018"
 
-[dependencies]
+[dev-dependencies]
+quickcheck = "0.2"
+rand = "0.3"
+criterion = "0.2"
