--- a/grokking_dl/3_chapter/rustlang/nnrs/Cargo.toml
+++ b/grokking_dl/3_chapter/rustlang/nnrs/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
-name = "ngrammer"
+name = "nnrs"
 version = "0.1.0"
 authors = ["Joshua Bowles <jbowayles@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-array_tool = "~1.0.3"
+nalgebra = "0.16"
