--- a/grokking_dl/3_chapter/rustlang/nnrs-nd/Cargo.toml
+++ b/grokking_dl/3_chapter/rustlang/nnrs-nd/Cargo.toml
@@ -1,8 +1,7 @@
 [package]
-name = "nnrs"
+name = "nnrs-nd"
 version = "0.1.0"
 authors = ["Joshua Bowles <jbowayles@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-nalgebra = "0.16"
