--- a/basic_stats/ruststats/Cargo.toml
+++ b/basic_stats/ruststats/Cargo.toml
@@ -7,3 +7,6 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+
+[dev-dependencies]
+float-cmp = "0.6.0" # for asserting floating point differences in test
